removing .idea from github

--- a/notebooks/kranok-nv_iter-1.ipynb
+++ b/notebooks/kranok-nv_iter-1.ipynb
@@ -3488,7 +3488,21 @@
       "Epoch 2/10\n",
       "450/450 [==============================] - 81s 180ms/step - loss: 1.8469e-05 - accuracy: 1.0000 - val_loss: 1.6603e-05 - val_accuracy: 1.0000\n",
       "Epoch 3/10\n",
-      "179/450 [==========>...................] - ETA: 43s - loss: 1.1187e-05 - accuracy: 1.0000"
+      "450/450 [==============================] - 89s 198ms/step - loss: 9.3441e-06 - accuracy: 1.0000 - val_loss: 1.0535e-05 - val_accuracy: 1.0000\n",
+      "Epoch 4/10\n",
+      "450/450 [==============================] - 123s 274ms/step - loss: 5.7135e-06 - accuracy: 1.0000 - val_loss: 6.7152e-06 - val_accuracy: 1.0000\n",
+      "Epoch 5/10\n",
+      "450/450 [==============================] - 93s 207ms/step - loss: 3.8322e-06 - accuracy: 1.0000 - val_loss: 4.3992e-06 - val_accuracy: 1.0000\n",
+      "Epoch 6/10\n",
+      "450/450 [==============================] - 87s 194ms/step - loss: 2.6757e-06 - accuracy: 1.0000 - val_loss: 4.1509e-06 - val_accuracy: 1.0000\n",
+      "Epoch 7/10\n",
+      "450/450 [==============================] - 83s 184ms/step - loss: 1.9488e-06 - accuracy: 1.0000 - val_loss: 2.9930e-06 - val_accuracy: 1.0000\n",
+      "Epoch 8/10\n",
+      "450/450 [==============================] - 91s 203ms/step - loss: 1.4548e-06 - accuracy: 1.0000 - val_loss: 2.0013e-06 - val_accuracy: 1.0000\n",
+      "Epoch 9/10\n",
+      "450/450 [==============================] - 82s 182ms/step - loss: 1.0889e-06 - accuracy: 1.0000 - val_loss: 1.3827e-06 - val_accuracy: 1.0000\n",
+      "Epoch 10/10\n",
+      "170/450 [==========>...................] - ETA: 50s - loss: 8.7130e-07 - accuracy: 1.0000"
      ]
     }
    ],
@@ -3506,9 +3520,7 @@
     "\n",
     "# Train the model\n",
     "model = get_basic_model()\n",
-    "trained_model = train_model(model, X_train, y_train, X_val, y_val, epochs=10)\n",
-    "\n",
-    "# Now"
+    "trained_model = train_model(model, X_train, y_train, X_val, y_val, epochs=10)"
    ],
    "metadata": {
     "collapsed": false,
