add idea to gitignore

--- a/notebooks/kranok-nv_iter-1.ipynb
+++ b/notebooks/kranok-nv_iter-1.ipynb
@@ -3502,7 +3502,7 @@
       "Epoch 9/10\n",
       "450/450 [==============================] - 82s 182ms/step - loss: 1.0889e-06 - accuracy: 1.0000 - val_loss: 1.3827e-06 - val_accuracy: 1.0000\n",
       "Epoch 10/10\n",
-      "170/450 [==========>...................] - ETA: 50s - loss: 8.7130e-07 - accuracy: 1.0000"
+      "274/450 [=================>............] - ETA: 32s - loss: 8.9768e-07 - accuracy: 1.0000"
      ]
     }
    ],
