test markdown cells

--- a/notebooks/kranok-nv_iter-1.ipynb
+++ b/notebooks/kranok-nv_iter-1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Violence Detection Iteration 1"
+    "# Violence Detection Iteration-1"
    ],
    "metadata": {
     "collapsed": false
@@ -50,13 +50,15 @@
    "cell_type": "markdown",
    "source": [
     "# Dataset Description\n",
+    "\n",
     "* Folder Videos is composed by a list of videos by name: [v1, v2, v3]\n",
     "* Folder Annotations is composed by a list of jsons by name: [v1, v2, v3]\n",
     "\n",
     "The name of each video corresponds to the name of each annotation\n",
     "\n",
     "The annotation json has the following structure:\n",
-    "```\n",
+    "\n",
+    "```json\n",
     "{\n",
     "  \"Frame_0000096\": {\n",
     "    \"numberOfPeople\": 1,\n",
@@ -69,8 +71,8 @@
     "        \"Normal\"\n",
     "      ]\n",
     "    ]\n",
-    "  },\n",
-    " ...\n",
+    "  }\n",
+    "}\n",
     "```"
    ],
    "metadata": {
@@ -3060,8 +3062,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Model 1: Simple CNN for Violence Detection\n",
-    "\n",
+    "# Model-1: Simple CNN for Violence Detection\n",
     "This is a basic CNN structure suitable for initial exploration. We'll break it down step-by-step:\n",
     "\n",
     "## Input Layer:\n",
@@ -3070,6 +3071,7 @@
     "## Convolutional Layer:\n",
     "Applies a set of filters (kernels) to the input frame to extract features.\n",
     "Typical choices for the first layer could be:\n",
+    "\n",
     "* Number of filters: 32\n",
     "* Kernel size: 3x3\n",
     "* Activation function: ReLU (Rectified Linear Unit)\n",
@@ -3092,15 +3094,75 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: tensorflow[and-cuda] in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (2.13.1)\n",
+      "Requirement already satisfied: tensorflow-intel==2.13.1 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow[and-cuda]) (2.13.1)\n",
+      "Requirement already satisfied: absl-py>=1.0.0 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (2.1.0)\n",
+      "Requirement already satisfied: astunparse>=1.6.0 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (1.6.3)\n",
+      "Requirement already satisfied: flatbuffers>=23.1.21 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (24.3.25)\n",
+      "Requirement already satisfied: gast<=0.4.0,>=0.2.1 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (0.4.0)\n",
+      "Requirement already satisfied: google-pasta>=0.1.1 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (0.2.0)\n",
+      "Requirement already satisfied: h5py>=2.9.0 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (3.9.0)\n",
+      "Requirement already satisfied: libclang>=13.0.0 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (18.1.1)\n",
+      "Requirement already satisfied: numpy<=1.24.3,>=1.22 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (1.24.3)\n",
+      "Requirement already satisfied: opt-einsum>=2.3.2 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (3.3.0)\n",
+      "Requirement already satisfied: packaging in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (23.2)\n",
+      "Requirement already satisfied: protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<5.0.0dev,>=3.20.3 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (4.25.3)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (68.2.2)\n",
+      "Requirement already satisfied: six>=1.12.0 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (1.16.0)\n",
+      "Requirement already satisfied: termcolor>=1.1.0 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (2.4.0)\n",
+      "Requirement already satisfied: typing-extensions<4.6.0,>=3.6.6 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (4.5.0)\n",
+      "Requirement already satisfied: wrapt>=1.11.0 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (1.16.0)\n",
+      "Requirement already satisfied: grpcio<2.0,>=1.24.3 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (1.63.0)\n",
+      "Requirement already satisfied: tensorboard<2.14,>=2.13 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (2.13.0)\n",
+      "Requirement already satisfied: tensorflow-estimator<2.14,>=2.13.0 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (2.13.0)\n",
+      "Requirement already satisfied: keras<2.14,>=2.13.1 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (2.13.1)\n",
+      "Requirement already satisfied: tensorflow-io-gcs-filesystem>=0.23.1 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorflow-intel==2.13.1->tensorflow[and-cuda]) (0.31.0)\n",
+      "Requirement already satisfied: wheel<1.0,>=0.23.0 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from astunparse>=1.6.0->tensorflow-intel==2.13.1->tensorflow[and-cuda]) (0.41.2)\n",
+      "Requirement already satisfied: google-auth<3,>=1.6.3 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorboard<2.14,>=2.13->tensorflow-intel==2.13.1->tensorflow[and-cuda]) (2.29.0)\n",
+      "Requirement already satisfied: google-auth-oauthlib<1.1,>=0.5 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorboard<2.14,>=2.13->tensorflow-intel==2.13.1->tensorflow[and-cuda]) (1.0.0)\n",
+      "Requirement already satisfied: markdown>=2.6.8 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorboard<2.14,>=2.13->tensorflow-intel==2.13.1->tensorflow[and-cuda]) (3.6)\n",
+      "Requirement already satisfied: requests<3,>=2.21.0 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorboard<2.14,>=2.13->tensorflow-intel==2.13.1->tensorflow[and-cuda]) (2.31.0)\n",
+      "Requirement already satisfied: tensorboard-data-server<0.8.0,>=0.7.0 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorboard<2.14,>=2.13->tensorflow-intel==2.13.1->tensorflow[and-cuda]) (0.7.2)\n",
+      "Requirement already satisfied: werkzeug>=1.0.1 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from tensorboard<2.14,>=2.13->tensorflow-intel==2.13.1->tensorflow[and-cuda]) (3.0.2)\n",
+      "Requirement already satisfied: cachetools<6.0,>=2.0.0 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from google-auth<3,>=1.6.3->tensorboard<2.14,>=2.13->tensorflow-intel==2.13.1->tensorflow[and-cuda]) (5.3.3)\n",
+      "Requirement already satisfied: pyasn1-modules>=0.2.1 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from google-auth<3,>=1.6.3->tensorboard<2.14,>=2.13->tensorflow-intel==2.13.1->tensorflow[and-cuda]) (0.4.0)\n",
+      "Requirement already satisfied: rsa<5,>=3.1.4 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from google-auth<3,>=1.6.3->tensorboard<2.14,>=2.13->tensorflow-intel==2.13.1->tensorflow[and-cuda]) (4.9)\n",
+      "Requirement already satisfied: requests-oauthlib>=0.7.0 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from google-auth-oauthlib<1.1,>=0.5->tensorboard<2.14,>=2.13->tensorflow-intel==2.13.1->tensorflow[and-cuda]) (2.0.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard<2.14,>=2.13->tensorflow-intel==2.13.1->tensorflow[and-cuda]) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard<2.14,>=2.13->tensorflow-intel==2.13.1->tensorflow[and-cuda]) (3.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard<2.14,>=2.13->tensorflow-intel==2.13.1->tensorflow[and-cuda]) (2.1.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard<2.14,>=2.13->tensorflow-intel==2.13.1->tensorflow[and-cuda]) (2024.2.2)\n",
+      "Requirement already satisfied: MarkupSafe>=2.1.1 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from werkzeug>=1.0.1->tensorboard<2.14,>=2.13->tensorflow-intel==2.13.1->tensorflow[and-cuda]) (2.1.3)\n",
+      "Requirement already satisfied: pyasn1<0.7.0,>=0.4.6 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from pyasn1-modules>=0.2.1->google-auth<3,>=1.6.3->tensorboard<2.14,>=2.13->tensorflow-intel==2.13.1->tensorflow[and-cuda]) (0.6.0)\n",
+      "Requirement already satisfied: oauthlib>=3.0.0 in c:\\users\\margo\\anaconda3\\envs\\tfm\\lib\\site-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<1.1,>=0.5->tensorboard<2.14,>=2.13->tensorflow-intel==2.13.1->tensorflow[and-cuda]) (3.2.2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: tensorflow 2.13.1 does not provide the extra 'and-cuda'\n"
+     ]
+    }
+   ],
    "source": [
-    "# Execute if you are not able to install tensorflow properly\n",
+    "# Execute this if you are not able to install tensorflow properly\n",
     "!pip install tensorflow[and-cuda]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-05T09:23:08.813501Z",
+     "start_time": "2024-05-05T09:23:05.797406Z"
+    }
    },
-   "id": "8e70cb3dbe0c13d2"
+   "id": "8e70cb3dbe0c13d2",
+   "execution_count": 198
   },
   {
    "cell_type": "code",
@@ -3502,7 +3564,7 @@
       "Epoch 9/10\n",
       "450/450 [==============================] - 82s 182ms/step - loss: 1.0889e-06 - accuracy: 1.0000 - val_loss: 1.3827e-06 - val_accuracy: 1.0000\n",
       "Epoch 10/10\n",
-      "274/450 [=================>............] - ETA: 32s - loss: 8.9768e-07 - accuracy: 1.0000"
+      "450/450 [==============================] - 88s 195ms/step - loss: 8.3871e-07 - accuracy: 1.0000 - val_loss: 1.2993e-06 - val_accuracy: 1.0000\n"
      ]
     }
    ],
@@ -3524,12 +3586,13 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
+     "end_time": "2024-05-05T09:09:33.271858Z",
      "start_time": "2024-05-05T08:54:12.064134Z"
     }
    },
-   "id": "612bc4941b179af7"
+   "id": "612bc4941b179af7",
+   "execution_count": 197
   },
   {
    "cell_type": "code",
